# flask-docker

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  deploy.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: test-and-build.yaml
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
server/: __init__.py  app.py
server/templates/: index.html
tests/: test_awesome.py  test_dummy2.py  test_flask_docker.py  test_server.py
